plugins {
    id 'java'
    id 'maven-publish'
    id 'signing'
    id 'org.ajoberstar.grgit' version '5.2.0'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
}

allprojects {
    repositories {
        mavenCentral()
        mavenLocal()
    }
}

ext.ossrhUsername = System.getenv('MAVEN_USERNAME')
ext.ossrhPassword = System.getenv('MAVEN_PASSWORD')

nexusPublishing {
    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
            username = ossrhUsername
            password = ossrhPassword
        }
    }
}

// Root project does not publish artifacts (subprojects + BOM handle this)

subprojects {
    def commit_id = getCheckedOutGitCommitHash()
    if (project.version.endsWith("-SNAPSHOT")) {
        version = "${project.version}".replace("-SNAPSHOT", "-${commit_id}-SNAPSHOT")
    }

    // The BOM module uses java-platform, which is incompatible with java-library
    if (project.name == 'julc-bom') {
        return
    }

    apply plugin: 'java-library'

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
//        options.compilerArgs.addAll(['--enable-preview'])
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
//        jvmArgs '--enable-preview'
        jvmArgs '--enable-native-access=ALL-UNNAMED'
        maxHeapSize = '1g'
    }

    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
        options.addStringOption('-release', '25')
//        options.addBooleanOption('-enable-preview', true)
        options.addStringOption('Xdoclint:none', '-quiet')
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:5.11.4')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
        }
    }

    // Publishing for publishable modules
    def nonPublishable = ['julc-examples', 'julc-e2e-tests', 'julc-plugin-test', 'julc-analyzer-cli', 'julc-benchmark', 'julc-cli', 'julc-playground', 'julc-jrl']
    if (!nonPublishable.contains(project.name)) {
        apply plugin: 'maven-publish'
        apply plugin: 'signing'

        java {
            withSourcesJar()
            withJavadocJar()
        }

        afterEvaluate {
            if (!plugins.hasPlugin('java-gradle-plugin')) {
                publishing {
                    publications {
                        mavenJava(MavenPublication) {
                            from components.java
                            artifactId project.name
                            pom {
                                url = 'https://github.com/bloxbean/julc'
                                licenses {
                                    license {
                                        name = 'The MIT License'
                                        url = 'https://opensource.org/licenses/mit-license.php'
                                    }
                                }
                                developers {
                                    developer {
                                        id = 'satran004'
                                        name = 'Satya'
                                    }
                                }
                                scm {
                                    connection = 'scm:git:git://github.com/bloxbean/julc.git'
                                    developerConnection = 'scm:git:ssh://git@github.com/bloxbean/julc.git'
                                    url = 'https://github.com/bloxbean/julc'
                                }
                            }
                        }
                    }

                }
            }
        }

        ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
        if (isReleaseVersion && !project.hasProperty("skipSigning")) {
            signing {
                sign publishing.publications
            }
        }
    }
}

def getCheckedOutGitCommitHash() {
    try {
        grgit.head().abbreviatedId
    } catch (Exception e) {
        // Fallback for git worktrees where grgit may not resolve properly
        'git rev-parse --short HEAD'.execute(null, project.rootDir).text.trim()
    }
}
